# pipeguard

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  install.sh  taplo.toml  typos.toml
.claude/: SESSION_KNOWLEDGE.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
benches/: detection_benchmark.rs  latency_benchmark.rs  memory_benchmark.rs
docs/: known-detection-gaps.md
docs/plans/: 2026-01-05-pipeguard-design.md  2026-01-06-paper-restructure-design.md  2026-01-13-automatic-rule-updates-design.md  2026-01-13-automatic-updates-implementation.md  2026-02-14-centralized-structured-logging.md
packaging/: Makefile
packaging/scripts/: postinstall  preinstall  uninstall.sh
paper/: .gitignore  Makefile  _quarto.yml  index.qmd  refs.bib
paper/_extensions/usenix/: _extension.yml  header.tex  usenix-2020-09.sty
paper/paperwork/: DEFCON_SG_DemoLab_Submission.md
paper/sections/: 01-introduction.qmd  02-prompt-injection-threat.qmd  03-why-defenses-fail.qmd  04-architecture.qmd  05-evaluation.qmd  06-related-work.qmd  07-discussion.qmd  08-conclusion.qmd
rules/: 01-obfuscation.yar  02-staged.yar  03-reverse-shell.yar  04-persistence.yar  05-privilege-escalation.yar  06-crypto-theft.yar  07-quarantine-bypass.yar  08-amos-clickfix.yar  09-recon.yar  10-anti-analysis.yar  11-supply-chain-python.yar  12-supply-chain-npm.yar  13-supply-chain-realworld.yar  ENHANCEMENT_SUMMARY.md  core.yar
shell/: content-filter.sh  init.sh  pipeguard-common.sh  pipeguard.bash  pipeguard.fish  pipeguard.zsh
src/: lib.rs  logging.rs  main.rs
src/cli/: args.rs
src/cli/commands/: config.rs  install.rs  mod.rs  rules.rs  scan.rs  update.rs
src/config/: mod.rs  settings.rs
src/detection/: mod.rs  pipeline.rs  scanner.rs  threat.rs
src/logging/: audit.rs  mod.rs
src/update/: crypto.rs  manager.rs  mod.rs  storage.rs
supply-chain/: config.toml
testdata/: README.md
testdata/malware/supply_chain/: datadog_patterns.txt  datadog_real_samples.md
testdata/metadata/: benign_labels.json  malware_labels.json
tests/: TEST_COVERAGE_SUMMARY.md  audit_log_tests.rs  cli_exhaustive_tests.rs  cli_tests.rs  cli_update_tests.rs  config_exhaustive_tests.rs  config_security_tests.rs  config_tests.rs  config_updates_tests.rs  crypto_exhaustive_tests.rs  crypto_tests.rs  download_detection_tests.rs  false_positive_tests.rs  integration_tests.rs  malware_detection_tests.rs  manager_tests.rs  pipeline_exhaustive_tests.rs  pipeline_tests.rs  pipeline_versioned_tests.rs  scanner_exhaustive_tests.rs  scanner_tests.rs  storage_exhaustive_tests.rs  storage_tests.rs  test-smart-filter.sh  threat_boundary_tests.rs  threat_exhaustive_tests.rs  threat_tests.rs  unwrap_safety_tests.rs  update_integration_tests.rs  update_regression_tests.rs  update_security_tests.rs  url_validation_tests.rs
tests/common/: mod.rs
