[package]
name = "pipeguard"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Defend against curl|bash attacks with multi-layer interception and threat detection"
repository = "https://github.com/SecurityRonin/pipeguard"
homepage = "https://pipeguard.dev"
keywords = ["security", "malware", "curl", "bash", "yara"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "pipeguard"
path = "src/lib.rs"

[[bin]]
name = "pipeguard"
path = "src/main.rs"

[features]
default = []

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"

# Detection
yara = "0.28"
sha2 = "0.10"

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "env-filter",
  "json",
] }

# Error handling
thiserror = "2"
anyhow = "1"

# Update system
reqwest = { version = "0.12", features = ["blocking", "json"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
url = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "detection_benchmark"
harness = false

[[bench]]
name = "latency_benchmark"
harness = false

[[bench]]
name = "memory_benchmark"
harness = false

[profile.release]
lto = true
strip = true
